# team-signals

./: README.md  robot.service  setup.py  start_robot.sh
arduino/led_controller/: led_controller.ino  patterns.cpp  patterns.h  state_defs.h
raspberry_pi/: CMakeLists.txt  package.xml  setup.py
raspberry_pi/audio_engine/: audio_engine.py
raspberry_pi/launch/: state_machine.launch  test_state_machine.launch
raspberry_pi/signal_project/: __init__.py
raspberry_pi/signal_project/audio_engine/: __init__.py  audio_engine.py
raspberry_pi/signal_project/led_engine/: __init__.py  alarm_listener.py  led_engine.py
raspberry_pi/signal_project/nodes/: __init__.py  signal_controller_node.py  state_machine_node.py  test_state_machine.py
raspberry_pi/signal_project/scripts/: __init__.py  alarm_listener.py  led_engine.py
raspberry_pi/signal_project/state_machine/: __init__.py  signal_state_defs.py  signal_state_machine.py  state_change_flag.py  state_machine.py
raspberry_pi/signal_project/state_machine/states/: __init__.py  busy_state.py  error_major_state.py  error_minor_nav_state.py  error_minor_state.py  error_minor_stuck_state.py  goal_reached_state.py  greeting_state.py  idle_state.py  low_battery_state.py  move_backward_state.py  move_forward_state.py  move_left_state.py  move_right_state.py  move_state.py  reverse_state.py  room_not_found_state.py  speaking_state.py  start_move_state.py  stop_busy_state.py  stop_move_state.py  waiting_state.py
raspberry_pi/state_machine/: signal_state_machine.py
raspberry_pi/test_nodes/: fake_movement_node.py  test_state_machine.py
(+3 files in other folders)
